--- a/dashboard.ioc
+++ b/dashboard.ioc
@@ -1,12 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV6
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
-ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISINGFALLING
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DiscontinuousConvMode,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,ExternalTrigConv,DMAContinuousRequests,EOCSelection,ExternalTrigConvEdge
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DiscontinuousConvMode,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,ExternalTrigConv,DMAContinuousRequests,EOCSelection,ExternalTrigConvEdge,ClockPrescaler
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -46,6 +47,11 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
+FREERTOS.Queues01=canRxQueue,50,struct CAN_BufferElement,0,Static,canRxQueueBuffer,canRxQueueControlBlock;canTxQueue,10,struct CAN_BufferElement,0,Static,canTxQueueBuffer,canTxQueueControlBlock
+FREERTOS.Tasks01=TaskSysEngine,48,128,StartTaskSysEngine,Default,NULL,Static,TaskSysEngineBuffer,TaskSysEngineControlBlock;TaskCyclic1ms,45,128,StartTaskCyclic1ms,Default,NULL,Static,TaskCyclic1msBuffer,TaskCyclic1msControlBlock;TaskCyclic10ms,40,128,StartTaskCyclic10ms,Default,NULL,Static,TaskCyclic10msBuffer,TaskCyclic10msControlBlock;TaskCyclic100ms,32,128,StartTaskCyclic100ms,Default,NULL,Static,TaskCyclic100msBuffer,TaskCyclic100msControlBlock;InitTask,55,128,StartInitTask,Default,NULL,Static,InitTaskBuffer,InitTaskControlBlock
+FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Reload
@@ -55,19 +61,21 @@ Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=SYS
-Mcu.IP11=TIM3
-Mcu.IP12=TIM7
-Mcu.IP13=USART1
+Mcu.IP10=SPI3
+Mcu.IP11=SYS
+Mcu.IP12=TIM2
+Mcu.IP13=TIM3
+Mcu.IP14=TIM7
+Mcu.IP15=USART1
 Mcu.IP2=CAN2
 Mcu.IP3=DAC
 Mcu.IP4=DMA
-Mcu.IP5=I2C1
-Mcu.IP6=IWDG
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SPI3
-Mcu.IPNb=14
+Mcu.IP5=FREERTOS
+Mcu.IP6=I2C1
+Mcu.IP7=IWDG
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=16
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -108,45 +116,53 @@ Mcu.Pin4=PC2
 Mcu.Pin40=PB7
 Mcu.Pin41=PB8
 Mcu.Pin42=PB9
-Mcu.Pin43=VP_IWDG_VS_IWDG
-Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin43=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin44=VP_IWDG_VS_IWDG
+Mcu.Pin45=VP_SYS_VS_tim6
+Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=47
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
-NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_SCE_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.CAN2_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ROT_SW1_AIN_ADC_IN
 PA0-WKUP.Signal=ADCx_IN0
@@ -337,7 +353,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_CAN2_Init-CAN2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_CAN2_Init-CAN2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_TIM3_Init-TIM3-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -398,6 +414,10 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM2.Period=5-1
+TIM2.Prescaler=9000-1
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -411,10 +431,14 @@ TIM7.Period=10-1
 TIM7.Prescaler=9000-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
