--- a/dashboard.ioc
+++ b/dashboard.ioc
@@ -20,13 +20,13 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CAN1.ABOM=ENABLE
-CAN1.BS1=CAN_BS1_12TQ
+CAN1.BS1=CAN_BS1_15TQ
 CAN1.BS2=CAN_BS2_2TQ
-CAN1.CalculateBaudRate=1000000
-CAN1.CalculateTimeBit=1000
-CAN1.CalculateTimeQuantum=66.66666666666666
+CAN1.CalculateBaudRate=250000
+CAN1.CalculateTimeBit=4000
+CAN1.CalculateTimeQuantum=222.22222222222223
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,ABOM
-CAN1.Prescaler=3
+CAN1.Prescaler=10
 CAN2.ABOM=ENABLE
 CAN2.BS1=CAN_BS1_12TQ
 CAN2.BS2=CAN_BS2_2TQ
@@ -49,13 +49,13 @@ Dma.Request0=ADC1
 Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
-FREERTOS.Queues01=canRxQueue,50,struct CAN_BufferElement,0,Static,canRxQueueBuffer,canRxQueueControlBlock;canTxQueue,10,struct CAN_BufferElement,0,Static,canTxQueueBuffer,canTxQueueControlBlock
-FREERTOS.Tasks01=TaskSysEngine,48,128,StartTaskSysEngine,Default,NULL,Static,TaskSysEngineBuffer,TaskSysEngineControlBlock;TaskCyclic1ms,45,128,StartTaskCyclic1ms,Default,NULL,Static,TaskCyclic1msBuffer,TaskCyclic1msControlBlock;TaskCyclic10ms,40,128,StartTaskCyclic10ms,Default,NULL,Static,TaskCyclic10msBuffer,TaskCyclic10msControlBlock;TaskCyclic100ms,32,128,StartTaskCyclic100ms,Default,NULL,Static,TaskCyclic100msBuffer,TaskCyclic100msControlBlock;InitTask,55,128,StartInitTask,Default,NULL,Static,InitTaskBuffer,InitTaskControlBlock
+FREERTOS.Queues01=canRxMsgQueue,50,struct CAN_MsgItem,0,Static,canRxMsgItem,canRxMsgQueueControlBlock;canTxMsgQueue,10,struct CAN_MsgItem,0,Static,canTxMsgItem,canTxMsgQueueControlBlock
+FREERTOS.Tasks01=TaskSysEngine,48,128,StartTaskSysEngine,Default,NULL,Static,TaskSysEngineBuffer,TaskSysEngineControlBlock;TaskCyclic1ms,40,128,StartTaskCyclic1ms,Default,NULL,Static,TaskCyclic1msBuffer,TaskCyclic1msControlBlock;TaskCyclic10ms,32,128,StartTaskCyclic10ms,Default,NULL,Static,TaskCyclic10msBuffer,TaskCyclic10msControlBlock;TaskCyclic100ms,24,128,StartTaskCyclic100ms,Default,NULL,Static,TaskCyclic100msBuffer,TaskCyclic100msControlBlock
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Reload
-IWDG.Reload=80-1
+IWDG.Reload=800-1
 KeepUserPlacement=true
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
@@ -80,54 +80,55 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PB2
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PC6
-Mcu.Pin22=PC7
-Mcu.Pin23=PC8
-Mcu.Pin24=PC9
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PC6
+Mcu.Pin23=PC7
+Mcu.Pin24=PC8
+Mcu.Pin25=PC9
+Mcu.Pin26=PA8
+Mcu.Pin27=PA9
+Mcu.Pin28=PA10
+Mcu.Pin29=PA11
 Mcu.Pin3=PC1
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PA15
-Mcu.Pin33=PC10
-Mcu.Pin34=PC11
-Mcu.Pin35=PC12
-Mcu.Pin36=PD2
-Mcu.Pin37=PB3
-Mcu.Pin38=PB5
-Mcu.Pin39=PB6
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PA15
+Mcu.Pin34=PC10
+Mcu.Pin35=PC11
+Mcu.Pin36=PC12
+Mcu.Pin37=PD2
+Mcu.Pin38=PB3
+Mcu.Pin39=PB5
 Mcu.Pin4=PC2
-Mcu.Pin40=PB7
-Mcu.Pin41=PB8
-Mcu.Pin42=PB9
-Mcu.Pin43=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin44=VP_IWDG_VS_IWDG
-Mcu.Pin45=VP_SYS_VS_tim6
-Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=PB6
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin45=VP_IWDG_VS_IWDG
+Mcu.Pin46=VP_SYS_VS_tim6
+Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=49
+Mcu.PinsNb=50
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -188,13 +189,17 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_4_pins
 PA15.Signal=SYS_JTDI
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=AMS_ERR_LED_nCMD_GPIO_OUT
+PA2.GPIO_Label=nAMS_ERR_LED_CMD_GPIO_OUT
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=COOLING_PUMPS_V_DAC_OUT
 PA4.Locked=true
 PA4.Signal=COMP_DAC1_group
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=NUCLEO_LED
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=RAD_FANS_PWM_OUT_TIM_PWM
 PA6.Locked=true
@@ -212,11 +217,11 @@ PA9.GPIO_Label=T_VCP_TX_USART_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=PUSH_BTN3_IN_GPIO_IN
+PB0.GPIO_Label=nPUSH_BTN3_IN_GPIO_IN
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=PUSH_BTN4_IN_GPIO_IN
+PB1.GPIO_Label=nPUSH_BTN4_IN_GPIO_IN
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB12.GPIOParameters=GPIO_Label
@@ -287,15 +292,15 @@ PC2.GPIO_Label=TS_OFF_LED_CMD_GPIO_OUT
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=IMD_ERR_LED_nCMD_GPIO_OUT
+PC3.GPIO_Label=nIMD_ERR_LED_CMD_GPIO_OUT
 PC3.Locked=true
 PC3.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=PUSH_BTN1_IN_GPIO_IN
+PC4.GPIO_Label=nPUSH_BTN1_IN_GPIO_IN
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=PUSH_BTN2_IN_GPIO_IN
+PC5.GPIO_Label=nPUSH_BTN2_IN_GPIO_IN
 PC5.Locked=true
 PC5.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Label
@@ -368,37 +373,36 @@ RCC.FMPI2C1Freq_Value=45000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
-RCC.I2S1Freq_Value=48000000
-RCC.I2S2Freq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.I2S1Freq_Value=96000000
+RCC.I2S2Freq_Value=96000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
-RCC.PLLI2SPCLKFreq_Value=48000000
-RCC.PLLI2SQCLKFreq_Value=48000000
-RCC.PLLI2SRCLKFreq_Value=48000000
-RCC.PLLI2SoutputFreq_Value=48000000
-RCC.PLLM=4
+RCC.PLLI2SPCLKFreq_Value=96000000
+RCC.PLLI2SQCLKFreq_Value=96000000
+RCC.PLLI2SRCLKFreq_Value=96000000
+RCC.PLLI2SoutputFreq_Value=96000000
+RCC.PLLM=8
 RCC.PLLN=180
 RCC.PLLQCLKFreq_Value=180000000
 RCC.PLLRCLKFreq_Value=180000000
-RCC.PLLSAIPCLKFreq_Value=48000000
-RCC.PLLSAIQCLKFreq_Value=48000000
-RCC.PLLSAIoutputFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLSAIPCLKFreq_Value=96000000
+RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLSAIoutputFreq_Value=96000000
 RCC.PWRFreq_Value=180000000
-RCC.SAIAFreq_Value=48000000
-RCC.SAIBFreq_Value=48000000
+RCC.SAIAFreq_Value=96000000
+RCC.SAIBFreq_Value=96000000
 RCC.SDIOFreq_Value=180000000
 RCC.SPDIFRXFreq_Value=180000000
 RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USBFreq_Value=180000000
-RCC.VCOI2SInputFreq_Value=500000
-RCC.VCOI2SOutputFreq_Value=96000000
+RCC.VCOI2SInputFreq_Value=1000000
+RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=360000000
-RCC.VCOSAIInputFreq_Value=500000
-RCC.VCOSAIOutputFreq_Value=96000000
+RCC.VCOSAIInputFreq_Value=1000000
+RCC.VCOSAIOutputFreq_Value=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
@@ -409,9 +413,10 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CalculateBaudRate=22.5 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
@@ -444,3 +449,4 @@ VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
