fix: led 1 second on at the start

--- a/openblt_f446re/openblt_f446re.ioc
+++ b/openblt_f446re/openblt_f446re.ioc
@@ -23,15 +23,18 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin3=PA8
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB3
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin3=PC2
+Mcu.Pin4=PC3
+Mcu.Pin5=PA2
+Mcu.Pin6=PA8
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -56,6 +59,11 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=PinState,GPIO_Label
+PA2.GPIO_Label=AMS
+PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
+PA2.Signal=GPIO_Output
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
@@ -64,6 +72,15 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BUZZER_CMD
 PC13.Locked=true
 PC13.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=TSOFF
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label,PinState
+PC3.GPIO_Label=IMD
+PC3.Locked=true
+PC3.PinState=GPIO_PIN_SET
+PC3.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
