--- a/openblt_f446re/openblt_f446re.ioc
+++ b/openblt_f446re/openblt_f446re.ioc
@@ -2,12 +2,14 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN1.ABOM=ENABLE
 CAN1.BS1=CAN_BS1_12TQ
 CAN1.BS2=CAN_BS2_2TQ
 CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=66.66666666666666
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,ABOM,NART
+CAN1.NART=ENABLE
 CAN1.Prescaler=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -76,7 +78,7 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=TSOFF
 PC2.Locked=true
 PC2.Signal=GPIO_Output
-PC3.GPIOParameters=GPIO_Label,PinState
+PC3.GPIOParameters=PinState,GPIO_Label
 PC3.GPIO_Label=IMD
 PC3.Locked=true
 PC3.PinState=GPIO_PIN_SET
