--- a/dashboard.ioc
+++ b/dashboard.ioc
@@ -56,9 +56,10 @@ Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
 Mcu.IP10=SYS
-Mcu.IP11=TIM3
-Mcu.IP12=TIM7
-Mcu.IP13=USART1
+Mcu.IP11=TIM2
+Mcu.IP12=TIM3
+Mcu.IP13=TIM7
+Mcu.IP14=USART1
 Mcu.IP2=CAN2
 Mcu.IP3=DAC
 Mcu.IP4=DMA
@@ -67,7 +68,7 @@ Mcu.IP6=IWDG
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SPI3
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -110,19 +111,20 @@ Mcu.Pin41=PB8
 Mcu.Pin42=PB9
 Mcu.Pin43=VP_IWDG_VS_IWDG
 Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=47
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=6.11.0
-MxDb.Version=DB.6.0.110
+MxCube.Version=6.12.0
+MxDb.Version=DB.6.0.120
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -143,6 +145,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -337,7 +340,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_CAN2_Init-CAN2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_CAN2_Init-CAN2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_TIM3_Init-TIM3-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -398,6 +401,10 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM2.Period=10-1
+TIM2.Prescaler=9000-1
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -415,6 +422,8 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
